--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body * {
     text-align: left;
     font-size: 10pt;
     cursor: pointer;
+    outline: none;
 }
 
 .password:hover{
@@ -140,7 +141,7 @@ body * {
     margin-top: 10px;
     margin-bottom: 0;
     margin-left: 13px;
-    font-size: 10pt;
+    font-size: 9pt;
     
 }
 
